--- a/roles/webapp/templates/Dockerfile.j2
+++ b/roles/webapp/templates/Dockerfile.j2
@@ -1,4 +1,4 @@
-FROM ubuntu:16.04
+FROM ubuntu:17.10
 
 #VOLUME ["/mnt/data"]
 
@@ -38,6 +38,7 @@ RUN  apt-get install -y \
     sqlite \
     nano \
     sudo \
+    nfs-common \
     gettext-base && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /etc/apache2/sites-available/default-ssl.conf && \
@@ -56,6 +57,7 @@ RUN unzip owncloud-10.0.4.zip
 RUN rm -rf html && mv owncloud html && mkdir data
 #RUN chown -R www-data:www-data /var/www/owncloud /mnt/data 
 RUN chown -R www-data:www-data /var/www/html /var/www/data
+#RUN service statd start
 WORKDIR /var/www/html
 RUN sudo -u www-data php occ maintenance:install \
    --database "mysql" \
@@ -66,4 +68,8 @@ RUN sudo -u www-data php occ maintenance:install \
 
 RUN sudo -u www-data php occ config:system:set trusted_domains 1 --value="{{ inventory_hostname }}"
 
+#CMD mount -o nolock {{ storage_location }} /var/www/data
+#CMD service nfs-common start
+#CMD service rpcbind start
 CMD service apache2 start && tail -f /dev/null
+#CMD mount 10.0.0.101:/var/owncloud_data /var/www/data
